basic CICD stages added
